# rime-pipecat-agents

./: .gitignore  01-say-one-thing.py  README.md  console.py  log1.txt  log2.txt  logging_config.py  pipecat-sst-tts-llm.py  pyproject.toml  requirements.txt  rime.py  rime_agent.py  v76http2(8000).txt  v76http3(15000).txt  v76http8000.txt
console/: console.py  requirements.txt
llm-complete-chunk-tts/: pyproject.toml  rime-http.py
llm-complete-chunks-example/: .gitignore  main.py  pyproject.toml
logs/: rime_agent_log_001_20251009_203435.txt  rime_agent_log_001_20251009_204309.txt  rime_agent_log_002_20251009_203447.txt  rime_agent_log_002_20251009_204317.txt  rime_agent_log_003_20251009_205610.txt  rime_agent_log_004_20251009_205623.txt  rime_agent_log_005_20251009_205638.txt
rime-http/: main.py  pyproject.toml  rime-http.py
rime-multilingual-agent/: README.md  main.py  pyproject.toml
rime-simple-agent/: .gitignore  README.md  pyproject.toml  rime_agent.py
rime_raw_text_to_tts/: .env.example  README.md  main.py  requirements.txt  text.txt
